--- a/public/index.htm
+++ b/public/index.htm
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CContacts</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+<head>
+<meta charset="utf-8">
+<title>CContacts</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="css/main.css" rel="stylesheet" media="screen">
+</head>
+<body>
+  <div class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">CContacts</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">My Contacts</a></li>
+          <li><a href="#new">Add Contact</a></li>
+        </ul>
+        <form class="navbar-form navbar-right">
+          <div class="form-group">
+            <input type="text" placeholder="Name, e-mail, tag..." class="form-control">
+          </div>
+          <button type="submit" class="btn btn-success">Search</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  </body>
+  <div class="container">
+    <div class="page-header">
+      <h1>My Contacts</h1>
+    </div>
+    
+    <div class="table-responsive">
+        <table class="table table-condensed table-striped">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Person</th>
+              <th>City</th>
+              <th>Address</th>
+              <th>E-mail</th>
+              <th>Phone number</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td><a title="More info" href="#edit">Mario Baricevic</a></td>
+              <td>Strožanac</td>
+              <td>Blato 24</td>
+              <td><a title="Send email" href="mailto:mario.baricevic@gmail.com">mario.baricevic@gmail.com</a></td>
+              <td>+385 99 4588 006</td>
+              <td><a href="#edit">edit</a> - <a href="#delete">delete</a></td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td><a title="More info" href="#edit">Mario Baricevic</a></td>
+              <td>Strožanac</td>
+              <td>Blato 24</td>
+              <td><a title="Send email" href="mailto:mario.baricevic@gmail.com">mario.baricevic@gmail.com</a></td>
+              <td>+385 99 4588 006</td>
+              <td><a href="#edit">edit</a> - <a href="#delete">delete</a></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td><a title="More info" href="#edit">Mario Baricevic</a></td>
+              <td>Strožanac</td>
+              <td>Blato 24</td>
+              <td><a title="Send email" href="mailto:mario.baricevic@gmail.com">mario.baricevic@gmail.com</a></td>
+              <td>+385 99 4588 006</td>
+              <td><a href="#edit">edit</a> - <a href="#delete">delete</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+  </div>
+
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+</body>
 </html>
