Backbone.js and Underscore

--- a/public/index.htm
+++ b/public/index.htm
@@ -37,7 +37,7 @@
     <div class="page-header">
       <h1>My Contacts</h1>
     </div>
-    
+
     <div class="table-responsive">
         <table class="table table-condensed table-striped">
           <thead>
@@ -86,6 +86,8 @@
   </div>
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="lib/underscore-min.js"></script>
+<script src="lib/backbone-min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
