Backbone.js Contact list REST model

--- a/public/index.htm
+++ b/public/index.htm
@@ -19,8 +19,10 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="js/utils.js"></script>
+<script src="js/models/contactmodel.js"></script>
 <script src="js/views/header.js"></script>
 <script src="js/views/home.js"></script>
+<script src="js/views/contactlist.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
