--- a/public/tpl/HomeView.html
+++ b/public/tpl/HomeView.html
@@ -2,47 +2,4 @@
 <h1>My Contacts</h1>
 </div>
 
-<div class="table-responsive">
-<table class="table table-condensed table-striped">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Person</th>
-      <th>City</th>
-      <th>Address</th>
-      <th>E-mail</th>
-      <th>Phone number</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td><a title="More info" href="#edit">Mario Baricevic</a></td>
-      <td>Strožanac</td>
-      <td>Blato 24</td>
-      <td><a title="Send email" href="mailto:mario.baricevic@gmail.com">mario.baricevic@gmail.com</a></td>
-      <td>+385 99 4588 006</td>
-      <td><a href="#edit">edit</a> - <a href="#delete">delete</a></td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td><a title="More info" href="#edit">Mario Baricevic</a></td>
-      <td>Strožanac</td>
-      <td>Blato 24</td>
-      <td><a title="Send email" href="mailto:mario.baricevic@gmail.com">mario.baricevic@gmail.com</a></td>
-      <td>+385 99 4588 006</td>
-      <td><a href="#edit">edit</a> - <a href="#delete">delete</a></td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td><a title="More info" href="#edit">Mario Baricevic</a></td>
-      <td>Strožanac</td>
-      <td>Blato 24</td>
-      <td><a title="Send email" href="mailto:mario.baricevic@gmail.com">mario.baricevic@gmail.com</a></td>
-      <td>+385 99 4588 006</td>
-      <td><a href="#edit">edit</a> - <a href="#delete">delete</a></td>
-    </tr>
-  </tbody>
-</table>
-</div>
+<div id="search-results"></div>
