Country added to contact list item view

--- a/public/tpl/ContactListItemView.html
+++ b/public/tpl/ContactListItemView.html
@@ -12,6 +12,7 @@
       <strong><%= company %></strong><br>
       <%= address %><br>
       <%= city %>, <%= state %> <%= zip %><br>
+      <%= country %>
     </address>
   </div>
 </div>
