--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li class="menu-home active"><a href="#">My Contacts</a></li>
-      <li class="menu-new"><a href="#new">Add Contact</a></li>
+      <li class="menu-new"><a href="#contacts/new">Add Contact</a></li>
     </ul>
     <div class="navbar-form navbar-right">
       <div class="form-group">
