--- a/public/tpl/ContactFormView.html
+++ b/public/tpl/ContactFormView.html
@@ -1,28 +1,28 @@
-<form class="form-horizontal" role="form">
+<form id="contactform" class="form-horizontal" role="form">
   <fieldset class="col-lg-6">
     <legend>Personal info</legend>
     <div class="form-group">
     <label for="inputFirstName" class="col-md-3 control-label">First name</label>
     <div class="col-md-9">
-        <input type="text" class="form-control" id="inputFirstName" placeholder="Required">
+        <input type="text" class="form-control" name="firstName" id="inputFirstName" placeholder="Required">
     </div>
     </div>
     <div class="form-group">
     <label for="inputLastName" class="col-md-3 control-label">Last name</label>
     <div class="col-md-9">
-        <input type="text" class="form-control" id="inputLastName" placeholder="Required">
+        <input type="text" class="form-control" name="lastName" id="inputLastName" placeholder="Required">
     </div>
     </div>
     <div class="form-group">
       <label for="inputCompany" class="col-md-3 control-label">Company</label>
       <div class="col-md-9">
-        <input type="text" class="form-control" id="input">
+        <input type="text" class="form-control" name="company" id="input">
       </div>
     </div>
     <div class="form-group">
     <label for="inputJob" class="col-md-3 control-label">Position/job</label>
     <div class="col-md-9">
-        <input type="text" class="form-control" id="inputJob">
+        <input type="text" class="form-control" name="job" id="inputJob">
     </div>
     </div>
   </fieldset>
@@ -31,35 +31,43 @@
     <div class="form-group">
       <label for="inputAddress" class="col-md-3 control-label">Street</label>
       <div class="col-md-9">
-        <input type="text" class="form-control" id="inputAddress">
+        <input type="text" class="form-control" name="address" id="inputAddress">
       </div>
     </div>
     <div class="form-group">
       <label for="inputCity" class="col-md-3 control-label">City</label>
       <div class="col-md-5">
-        <input type="text" class="form-control" id="inputCity">
+        <input type="text" class="form-control" name="city" id="inputCity">
       </div>
       <label for="inputZip" class="col-md-1 control-label">ZIP</label>
       <div class="col-md-3">
-        <input type="text" class="form-control" id="inputZip">
+        <input type="text" class="form-control" name="zip" id="inputZip">
       </div>
     </div>
     <div class="form-group">
       <label for="inputCountry" class="col-md-3 control-label">Country</label>
       <div class="col-md-9">
-        <input type="text" class="form-control" id="inputCountry">
+        <input type="text" class="form-control" name="country" id="inputCountry">
       </div>
     </div>
     <div class="form-group">
       <label for="inputState" class="col-md-3 control-label">State</label>
       <div class="col-md-9">
-        <input type="text" class="form-control" id="inputState">
+        <input type="text" class="form-control" name="state" id="inputState">
       </div>
     </div>
   </fieldset>
-  <div class="form-group">
-    <div style="text-align: center">
-      <button type="submit" class="btn btn-primary">Save contact</button>
+  <fieldset class="col-lg-6">
+    <legend>Additional notes</legend>
+    <div class="form-group">
+      <div class="col-md-12">
+        <textarea class="form-control" rows="4" name="notes" id="inputNotes"></textarea>
+      </div>
     </div>
-  </div>
+    <div class="form-group">
+      <div style="text-align: center">
+        <button type="submit" class="btn btn-primary">Save contact</button>
+      </div>
+    </div>
+  </fieldset>
 </form>
