Search results page

--- a/public/index.htm
+++ b/public/index.htm
@@ -22,6 +22,7 @@
 <script src="js/models/contactmodel.js"></script>
 <script src="js/views/header.js"></script>
 <script src="js/views/home.js"></script>
+<script src="js/views/search.js"></script>
 <script src="js/views/contact.js"></script>
 <script src="js/main.js"></script>
 </body>
