--- a/public/tpl/SearchView.html
+++ b/public/tpl/SearchView.html
@@ -1,4 +1,5 @@
 <div class="page-header">
 <h1>Search results<br>
-<small><%- resultsFound %> results found for: "<%- query %>"</small></h1>
+<small><span data-rel="results-found">?</span> results found for: "<%- query %>"</small></h1>
 </div>
+<div id="search-results"></div>
