--- a/public/index.htm
+++ b/public/index.htm
@@ -18,6 +18,7 @@
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
+<script src="lib/moment.min.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/models/contactmodel.js"></script>
 <script src="js/views/header.js"></script>
