--- a/public/tpl/ContactView.html
+++ b/public/tpl/ContactView.html
@@ -1,7 +1,7 @@
 <div class="page-header clearfix">
   <h1><%- firstName+" "+lastName %></h1>
 </div>
-<div class="row">
+<div class="row contact">
 <div class="btn-group btn-group-sm pull-right">
   <a href="#contact/<%- id %>/edit" class="btn btn-warning">Edit</a>
   <a href="#" class="btn delete btn-danger">Delete</a>
@@ -12,9 +12,9 @@
   <dt>Company:</dt>
   <dd><%- company||"-" %></dd>
   <dt>Address:</dt>
-  <dd><address><%- address %><br>
-      <%- city + " " + zip + " " + state %><br>
-      <%- country %></address></dd>
+  <dd><address><span><%- address %></span>
+      <span><%- city + " " + zip + " " + state %></span>
+      <span><%- country %></span></address></dd>
 </dl>
 <dl class="dl-horizontal">
   <dt>Created on:</dt>
