Header menu collapses on search

--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <input id="search-q" type="text" placeholder="Name, e-mail, tag..." class="form-control">
       </div>
-      <button id="search" type="submit" class="btn btn-success">Search</button>
+      <button id="search" type="submit" data-toggle="collapse" data-target=".navbar-collapse" class="btn btn-success">Search</button>
     </div>
   </div>
 </div>
