--- a/public/tpl/ContactFormView.html
+++ b/public/tpl/ContactFormView.html
@@ -1,27 +1,27 @@
-<form id="contactform" class="form-horizontal" role="form">
+<form id="contactform" class="form-horizontal row" role="form">
   <fieldset class="col-lg-6">
     <legend>Personal info</legend>
     <div class="form-group" data-el="firstName">
-    <label for="inputFirstName" class="col-md-3 control-label">First name</label>
-    <div class="col-md-9">
+    <label for="inputFirstName" class="col-md-2 control-label">First name</label>
+    <div class="col-md-10">
         <input type="text" value="<%- firstName %>" class="form-control" name="firstName" id="inputFirstName" placeholder="Required">
     </div>
     </div>
     <div class="form-group" data-el="lastName">
-    <label for="inputLastName" class="col-md-3 control-label">Last name</label>
-    <div class="col-md-9">
+    <label for="inputLastName" class="col-md-2 control-label">Last name</label>
+    <div class="col-md-10">
         <input type="text" value="<%- lastName %>" class="form-control" name="lastName" id="inputLastName" placeholder="Required">
     </div>
     </div>
     <div class="form-group" data-el="company">
-      <label for="inputCompany" class="col-md-3 control-label">Company</label>
-      <div class="col-md-9">
+      <label for="inputCompany" class="col-md-2 control-label">Company</label>
+      <div class="col-md-10">
         <input type="text" value="<%- company %>" class="form-control" name="company" id="inputCompany">
       </div>
     </div>
     <div class="form-group" data-el="job">
-    <label for="inputJob" class="col-md-3 control-label">Position/job</label>
-    <div class="col-md-9">
+    <label for="inputJob" class="col-md-2 control-label">Position/job</label>
+    <div class="col-md-10">
         <input type="text" value="<%- job %>" class="form-control" name="job" id="inputJob">
     </div>
     </div>
@@ -29,45 +29,52 @@
   <fieldset class="col-lg-6">
     <legend>Address</legend>
     <div class="form-group" data-el="address">
-      <label for="inputAddress" class="col-md-3 control-label">Street</label>
-      <div class="col-md-9">
+      <label for="inputAddress" class="col-md-2 control-label">Street</label>
+      <div class="col-md-10">
         <input type="text" value="<%- address %>" class="form-control" name="address" id="inputAddress">
       </div>
     </div>
     <div class="form-group">
-      <label for="inputCity" class="col-md-3 control-label">City</label>
+      <label for="inputCity" class="col-md-2 control-label">City</label>
       <div class="col-md-5" data-el="city">
         <input type="text" value="<%- city %>" class="form-control" name="city" id="inputCity">
       </div>
-      <label for="inputZip" class="col-md-1 control-label">ZIP</label>
+      <label for="inputZip" class="col-md-2 control-label">ZIP Code</label>
       <div class="col-md-3" data-el="zip">
         <input type="text" value="<%- zip %>" class="form-control" name="zip" id="inputZip">
       </div>
     </div>
     <div class="form-group" data-el="country">
-      <label for="inputCountry" class="col-md-3 control-label">Country</label>
-      <div class="col-md-9">
+      <label for="inputCountry" class="col-md-2 control-label">Country</label>
+      <div class="col-md-10">
         <input type="text" value="<%- country %>" class="form-control" name="country" id="inputCountry">
       </div>
     </div>
     <div class="form-group" data-el="state">
-      <label for="inputState" class="col-md-3 control-label">State</label>
-      <div class="col-md-9">
+      <label for="inputState" class="col-md-2 control-label">State</label>
+      <div class="col-md-10">
         <input type="text" value="<%- state %>" class="form-control" name="state" id="inputState">
       </div>
     </div>
   </fieldset>
-  <fieldset class="col-lg-6" style="clear: both">
-    <legend>Additional notes</legend>
-    <div class="form-group" data-el="notes">
-      <div class="col-md-12">
-        <textarea class="form-control" rows="4" name="notes" id="inputNotes"><%- notes %></textarea>
+  <fieldset class="col-lg-12" style="clear: both">
+      <legend>Additional info</legend>
+      <div class="form-group">
+        <label for="inputTags" class="col-md-1 control-label">Tags</label>
+        <div class="col-md-11" data-el="tags">
+            <input type="text" value="<%- tags %>" class="form-control" name="tags" id="inputTags">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div style="text-align: center">
-        <button type="submit" class="btn btn-primary">Save contact</button>
+      <div class="form-group">
+        <label for="inputNotes" class="col-md-1 control-label">Notes</label>
+        <div class="col-md-11" data-el="notes">
+          <textarea class="form-control" rows="3" name="notes" id="inputNotes"><%- notes %></textarea>
+        </div>
       </div>
-    </div>
+      <div class="form-group">
+        <div style="text-align: center">
+          <button type="submit" class="btn btn-primary">Save contact</button>
+        </div>
+      </div>
   </fieldset>
 </form>
