--- a/public/tpl/ContactView.html
+++ b/public/tpl/ContactView.html
@@ -23,6 +23,8 @@
       <span><%- country %></span></address></dd>
 </dl>
 <dl class="dl-horizontal">
+  <dt>Tags:</dt>
+  <dd><%- tags||"-" %></dd>
   <dt>Notes:</dt>
   <dd><%- notes||"-" %></dd>
 </dl>
