--- a/public/tpl/ContactFormView.html
+++ b/public/tpl/ContactFormView.html
@@ -63,6 +63,7 @@
         <label for="inputTags" class="col-md-1 control-label">Tags</label>
         <div class="col-md-11" data-el="tags">
             <input type="text" value="<%- tags %>" class="form-control" name="tags" id="inputTags">
+            <span class="help-block">Comma (,) separated</span>
         </div>
       </div>
       <div class="form-group">
