--- a/public/tpl/ContactView.html
+++ b/public/tpl/ContactView.html
@@ -24,7 +24,7 @@
 </dl>
 <dl class="dl-horizontal">
   <dt>Tags:</dt>
-  <dd><%- tags||"-" %></dd>
+  <dd><%= this.options.model.getTagsLinks().join(", ") %></dd>
   <dt>Notes:</dt>
   <dd><%- notes||"-" %></dd>
 </dl>
