Contact e-mails added to form

--- a/public/tpl/ContactFormView.html
+++ b/public/tpl/ContactFormView.html
@@ -58,6 +58,17 @@
     </div>
   </fieldset>
   <fieldset class="col-lg-12" style="clear: both">
+    <legend>Contact info</legend>
+    <div class="col-md-6">
+        <div class="contact-emails"></div>
+        <button class="btn btn-sm col-md-offset-2 btn-info add-email"><span class="glyphicon glyphicon-envelope"></span> Add e-mail address</button>
+    </div>
+    <div class="col-md-6">
+        <div class="contact-phones"></div>
+        <button class="btn btn-sm col-md-offset-2 btn-info add-phone"><span class="glyphicon glyphicon-phone"></span> Add tel/mob number</button>
+    </div>
+  </fieldset>
+  <fieldset class="col-lg-12" style="clear: both">
       <legend>Additional info</legend>
       <div class="form-group">
         <label for="inputTags" class="col-md-1 control-label">Tags</label>
