--- a/public/tpl/ContactFormEmailItemView.html
+++ b/public/tpl/ContactFormEmailItemView.html
@@ -1,7 +1,7 @@
-<label for="inputEmail" class="col-md-2 control-label">Email</label>
+<label for="inputEmail<%- this.model.cid %>" class="col-md-2 control-label">Email</label>
 <div class="col-md-10 input-group">
-  <input type="email" value="<%- email %>" class="form-control" name="emails[]" id="inputEmail">
+  <input type="email" value="<%- email %>" class="form-control" id="inputEmail<%- this.model.cid %>">
   <span class="input-group-btn">
-    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-trash"></span></button>
+    <button class="btn btn-warning" data-delete="<%- this.model.cid %>" type="button"><span class="glyphicon glyphicon-trash"></span></button>
   </span>
 </div>
